<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.notification.NotificationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="12dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?selectableItemBackgroundBorderless"
            android:padding="2dp"
            android:src="@drawable/ic_back"
            android:tint="#444444"
            app:layout_constraintBottom_toBottomOf="@+id/tv_notification"
            app:layout_constraintEnd_toStartOf="@+id/tv_notification"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_notification" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_notification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="8dp"
            android:text="@string/notifications"
            android:textColor="#444444"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_back"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:text="@string/clear_all"
            android:textColor="@color/black_op_77"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_notification"
            app:layout_constraintEnd_toEndOf="@+id/tv_notification"
            app:layout_constraintTop_toTopOf="@+id/tv_notification" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_notified_task"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_notification"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_notification" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_empty_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/empty_notification"
            android:textAlignment="center"
            android:textColor="@color/stonewall_grey"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>