<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_empty_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/empty_today_task"
            android:textAlignment="center"
            android:textColor="@color/stonewall_grey"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/search_bar" />

        <LinearLayout
            android:id="@+id/ll_current_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/search_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_main_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                tools:itemCount="1"
                tools:listitem="@layout/item_day" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/edittext_search_bg"
            android:hint="@string/search"
            android:paddingStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_current_week"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_clear_search"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_margin="20dp"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:src="@drawable/ic_cross"
            app:layout_constraintBottom_toBottomOf="@+id/search_bar"
            app:layout_constraintEnd_toEndOf="@+id/search_bar"
            app:layout_constraintTop_toTopOf="@+id/search_bar" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_result_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:textAlignment="textStart"
            android:textColor="@color/black_op_77"
            android:textSize="12dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/search_bar"
            app:layout_constraintStart_toStartOf="@+id/search_bar"
            app:layout_constraintTop_toBottomOf="@+id/search_bar"
            tools:text="@string/search_result_count" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#444444"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/search_bar"
            app:layout_constraintStart_toStartOf="@+id/search_bar"
            app:layout_constraintTop_toBottomOf="@+id/tv_result_count"
            tools:text="All Tasks" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_tasks"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/search_bar"
            app:layout_constraintStart_toStartOf="@+id/search_bar"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <!-- temporary hide fab menu -->
        <LinearLayout
            android:id="@+id/fab_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_notifications"
                style="@style/NotificationFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="8dp"
                android:importantForAccessibility="no"
                android:visibility="gone" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_tasks"
                style="@style/TasksFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginBottom="8dp"
                android:importantForAccessibility="no"
                android:visibility="gone" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add"
                style="@style/AddTaskFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginBottom="-4dp"
                android:importantForAccessibility="no"
                android:visibility="gone" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_menu"
                style="@style/MenuFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:importantForAccessibility="no" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/AddTaskFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:importantForAccessibility="no"
            android:visibility="visible" />

        <FrameLayout
            android:id="@+id/fl_loading_screen"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_result_count">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>